# morpion-lpp

./: Deep_Learning_Intro.ipynb  README.md  solver.py
5dpaper/: dot.py  final.tex  games.bib  gemmating.tex  geometry.tex  introduction.tex  linear.tex  macros.tex  morpion5d.tex  psol2tikz.py  segment.py  sol2psol.py  sol2psol_unmarked.py  symmetry.tex  table.py  table.tex  upper_bounds.tex
5dpaper/figures/: 85.psol  85_box.tex  94.sol  Makefile  rules.psol  small.psol  uncon.sol  uncon_big.sol  uncon_corrected.psol  uncon_small.sol  unmarked_87.sol
5tpaper/: bound.tex  games.bib  geometry.tex  introduction.tex  linear.tex  macros.tex  main.tex  mip.tex  relaxation.tex
5tpaper/pictures/: calc_potential.tex  expotential.tex  gaphull.tex  gaphull2.tex  histogram.tex  initialposition.tex  key_lemma_corners.tex  key_lemma_pic.tex  key_lemma_two_gap_lines.tex  record.tex  recordpdf.tex
cccg2016/: Makefile  cccg2016.tex  table.tex
cccg2016/data/: 85.sol  exmpl_bbox.sol  psol2dat.py  sol2psol.py
cgw_ijcal2015/: Morpion485.tex
cgw_ijcal2015/positions/: 1.psol  1.tex  178.psol  178.tex  2.psol  2.tex  3.psol  3.tex  average.psol  average.tex  bruneau.psol  bruneau.tex  compile.sh  convexhull.tex  empty.psol  empty.tex  illegal.tex
lazy_constraints/: 82.psol  README.md  grid.py  requirements.txt  solver.py
src/: CMakeLists.txt  generator.cpp  lpp.h  morpion.h  morpion_lpp.cpp  octagons.cpp  potential_lpp.cpp
src/gemmate/: CMakeLists.txt  dot.py  hull.py  verifier.py  worker.py
src/generator/: CMakeLists.txt  generator.cpp  lpp.cpp  lpp.h  morpion.cpp  morpion.h  morpion_lpp.cpp  morpion_lpp.h  octagons.cpp  potential_lpp.cpp  tiered_lpp.cpp  verifier_sqlite.py
src/nrpa/: CMakeLists.txt  morpiongame.cpp  morpiongame.h  nrpa.cpp
src/solving5d/: solver.py
src/solving5d/hard_cases/: rect_0_0_0_0.lp  rect_0_0_0_0.lp.ord  rect_3_2_1_2.lp  rect_3_2_1_2.lp.ord  rect_3_2_2_2.lp  rect_3_2_2_2.lp.ord  rect_3_3_2_1.lp  rect_3_3_2_1.lp.ord  rect_3_3_2_2.lp  rect_3_3_2_2.lp.ord  rect_3_3_3_1.lp  rect_3_3_3_1.lp.ord  rect_4_2_1_2.lp  rect_4_2_1_2.lp.ord  rect_4_2_2_2.lp  rect_4_2_2_2.lp.ord  rect_4_3_0_2.lp  rect_4_3_0_2.lp.ord  rect_4_3_0_3.lp  rect_4_3_0_3.lp.ord  rect_4_3_1_1.lp  rect_4_3_1_1.lp.ord  rect_4_3_1_2.lp  rect_4_3_1_2.lp.ord  rect_4_3_1_3.lp  rect_4_3_1_3.lp.ord  rect_4_3_2_1.lp  rect_4_3_2_1.lp.ord  rect_4_3_2_2.lp  rect_4_3_2_2.lp.ord  rect_4_3_2_3.lp  rect_4_3_2_3.lp.ord  rect_4_3_3_1.lp  rect_4_3_3_1.lp.ord  rect_4_3_3_2.lp  rect_4_3_3_2.lp.ord  rect_4_4_1_0.lp  rect_4_4_1_0.lp.ord  rect_4_4_1_1.lp  rect_4_4_1_1.lp.ord  (+19 more)
src/tools/: pentasol2tikz.py  segment.py
src/webapp/: app.yaml  dot.py  gemmate_model.py  gemmate_rpc.py  gemmate_www.py  hull.py
src/webapp/templates/: browse_problem.html  browse_trees.html  verify_tree.html
